--- a/app/src/main/res/layout/fragment_word_detail.xml
+++ b/app/src/main/res/layout/fragment_word_detail.xml
@@ -10,12 +10,15 @@
         android:layout_gravity="left|top">
 
         <TextView android:layout_width="match_parent"
+            android:textSize="18dp"
             android:layout_height="wrap_content"
             android:id="@+id/word"/>
         <TextView android:layout_width="match_parent"
+            android:textSize="18dp"
             android:layout_height="wrap_content"
             android:id="@+id/wordmeaning"/>
         <TextView android:layout_width="match_parent"
+            android:textSize="18dp"
             android:layout_height="wrap_content"
             android:id="@+id/wordsample"/>
 
