--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,10 +11,14 @@
         android:id="@+id/textId"
         android:visibility="gone"
         />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Word"
         android:id="@+id/textViewWord"
-        android:textSize="@dimen/abc_text_size_title_material" />
+        android:textSize="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="@android:drawable/dialog_holo_light_frame" />
+
+
 </LinearLayout>
