--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,8 @@
 
     <item android:id="@+id/action_insert" android:title="@string/action_insert"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_online"
+        android:title="在线查询"/>
 </menu>
